<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    	<group>
	        <item android:id="@+id/mi_generateCode" android:title="@string/strGenerateCode" />
	        <item android:id="@+id/mi_changePwd" android:title="@string/strChangePwd" />
	        <item android:id="@+id/mi_resetPwd" android:title="@string/strResetPwd" />
        </group>
        <group>
	        <item android:id="@+id/mi_backup" android:title="@string/strBackup" android:enabled="false"/>
			<item android:id="@+id/mi_restore" android:title="@string/strRestore" android:enabled="false"/>
		</group>
		<group>
	        <item android:id="@+id/mi_about" android:title="@string/strAbout"/>
			<!-- <item android:id="@+id/mi_help" android:title="@string/strHelp" android:enabled="false"/> -->
		</group>
</menu>